# what-the-dog-doin

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  rust-toolchain.toml
src/: main.rs
