[package]
name = "what-the-dog-doin"
version = "0.1.0"
edition = "2021"
description = "CLI tool to play sounds in random intervals"
authors = [
  "ixhbinphoenix <phoenixgames.phoenix13@gmail.com>"
]
repository = "https://github.com/ixhbinphoenix/what-the-dog-doin"
categories = ["command-line-utilities"]
keyword = ["audio"]
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.1.13", features = ["derive"] }
rand = "0.8.5"
rodio = "0.17.1"
